tests/generics/async_await_outside.diag
async_await_outside.ax:1:1: error: await requires Future[T], found 22
async_await_outside.ax:1:1: error: await can only be used inside async functions
async_await_outside.ax:1:1: error: await requires Future[T], found 22
async_await_outside.ax:1:1: error: cannot await in non-async function
